# Eglantyne

./: .gitignore  error_message
hard/: all_body.iam  allbody.iam  arm.iam  board_cover_inside.ipt  board_cover_side_light.ipt  board_cover_side_light_right.ipt  body.iam  chest.iam  chest_cover_side_joint.ipt  chest_cover_stopper.ipt  hipjoint.iam  hipjoint.ipt  hipjoint_middle.ipt  hipjoint_toleg_middle.ipt  hipjoint_toleg_right.iam  hipjoint_toleg_under.ipt  leg_under.iam  leg_upper.iam  neck_bace.ipt  sholder_joint_cover.ipt  under_body.iam  upper_body.iam  waist.iam  waist_cover.ipt  waist_side.ipt  waist_side_right.ipt
hard/OldVersions/: Head.0010.iam  Head_1.0005.ipt  Head_2.0003.ipt  Head_3.0002.ipt  Head_4.0003.ipt  Head_cover.0010.ipt  (+99 more)
simulation/: error_message
simulation/src/simple_sim/: CMakeLists.txt  package.xml
simulation/src/simple_sim/description/launch/: view_robot.launch.py
simulation/src/simple_sim/description/urdf/: eglantyne.xacro  gazebo_setup.xacro  ros2_control_conf.xacro
simulation/src/simple_sim/description/urdf/body_info/: eglantyne_arm.xacro  eglantyne_arm_left.xacro  eglantyne_arm_right.xacro  eglantyne_body.xacro  eglantyne_leg.xacro  eglantyne_leg_left.xacro  eglantyne_leg_right.xacro  shape_macro.xacro
simulation/src/simple_sim/example/: squad.cpp
simulation/src/simple_sim/launch/: simenv.launch.py
simulation/src/simple_sim/simenv/config/: eglantyne_controller.yaml
simulation/src/simple_sim/simenv/launch/: eglantyne_controller.launch.py
simulation/src/simple_sim/src/controller/: pub_control.cpp
simulation/src/simple_sim/src/test/: pub_test.cpp  zero_pub.cpp
simulation/src/simple_sim/urdf/: body_macro.xacro  calc_mass.py  eglantyne.xacro  eglantyne_arm.xacro  eglantyne_leg.xacro  robot_arm_test.urdf
(+506 files in other folders)
